# E-commerce-microservices-project

./: .gitignore  README.md  docker-compose.yml
gateway/: dockerfile  (+2 more)
notification-service/: pyproject.toml  requirements.txt
notification-service/app/: config.py  main.py
notification-service/app/broker/: rabbitmq.py
notification-service/app/consumers/: __init__.py  order_created_consumer.py
notification-service/app/schemas/: __init__.py  events.py
notification-service/app/services/: __init__.py  notf_service.py
order-service/: .gitignore  alembic.ini  pyproject.toml
order-service/app/: config.py  dao.py  main.py
order-service/app/clients/: __init__.py  order_client.py  product_client.py
order-service/app/dependencies/: __init__.py  auth.py  rabbitmq.py
order-service/app/migration/: env.py
order-service/app/models/: __init__.py  order.py
order-service/app/routers/: __init__.py  order.py
order-service/app/schemas/: __init__.py  order.py
order-service/app/services/: __init__.py  order_service.py
product-service/: entrypoint.sh  pyproject.toml
product-service/app/: config.py  dao.py  events.py  main.py
product-service/app/consumers/: product_events.py
product-service/app/dependencies/: __init__.py  auth.py  database.py  redis.py
product-service/app/migrations/: env.py
product-service/app/models/: __init__.py  product.py
product-service/app/routers/: __init__.py  products.py
product-service/app/schemas/: __init__.py  product.py
user-service/: alembic.ini  dockerfile  pyproject.toml
user-service/app/: config.py  dao.py  main.py
(+63 files in other folders)
