[project]
name = "notification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "core",
    "dotenv>=0.9.9",
    "sendgrid>=6.12.5",
]

[tool.uv.sources]
core = { git = "https://github.com/zosinkin/core-package.git" }
