[project]
name = "order-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.1",
    "core",
    "httpx>=0.28.1",
]

[tool.uv.sources]
core = { git = "https://github.com/zosinkin/core-package.git" }






