[project]
name = "user-service"
version = "0.1.0"
description = "A service for user management and authentication"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "core",
    "email-validator>=2.3.0",
    "pydantic[email]>=2.12.5",
    "update>=0.0.1",
]

[tool.uv.sources]
core = { git = "https://github.com/zosinkin/core-package.git" }






